[package]
name = "easy_cmd"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.51"
colored = "2"
futures = "0.3.17"
pretty_env_logger = "0.4.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync"] }
yosup = { path = "../yosup" }
