[package]
name = "yosup"
version = "0.1.0"
edition = "2018"
authors = ["Louis Birla"]
description = "A rust library for peer-to-peer chatting using libp2p"

[dependencies]
pretty_env_logger = "0.4.0"
thiserror = "1.0"
async-trait = "0.1.51"
futures = "0.3.17"
libp2p = { version = "0.40.0-rc.2", features = ["tcp-tokio"] }
tokio = { version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "time"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
